--- a/Assignment.html
+++ b/Assignment.html
@@ -5,9 +5,11 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<p>Best 3 Anime of all time</p>
-		<h1>Dragon Ball Z</h1>
-		<h3>One Piece</h3>
-		<h6>Attack on Titan</h6>
+		<h1>Best Anime of all time</h1>
+		<main>
+			<p>Attack on Titan</p>
+			<img src="https://i.ebayimg.com/images/g/35UAAOSwjJVgBza-/s-l400.jpg">
+		</main>
+		<footer>By Arie Eskinazi</footer>
 	</body>
 </html>
