--- a/Assignment.html
+++ b/Assignment.html
@@ -5,10 +5,10 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<h1>Best Anime of all time</h1>
+		<h1>Best Dog</h1>
 		<main>
-			<p>Attack on Titan</p>
-			<img src="https://i.ebayimg.com/images/g/35UAAOSwjJVgBza-/s-l400.jpg">
+			<p>German Shepard</p>
+			<a href="Dog.html">Dog</a>
 		</main>
 		<footer>By Arie Eskinazi</footer>
 	</body>
