--- a/Assignment.html
+++ b/Assignment.html
@@ -8,7 +8,8 @@
 		<h1>Best Dog</h1>
 		<main>
 			<p>German Shepard</p>
-			<a href="Dog.html">Dog</a>
+			<a href="Dog.html">Adult Dog</a>
+			<a href="https://www.purina.com.au/-/media/project/purina/main/breeds/puppies/puppy-german-shepherd.jpg?h=475&la=en&w=825&hash=132EA9A970453AC3545DF71584E6AFD7">Puppy</a>
 		</main>
 		<footer>By Arie Eskinazi</footer>
 	</body>
