--- a/Dog.html
+++ b/Dog.html
@@ -4,8 +4,16 @@
 		<title>Dog Image</title>
 		<meta charset="utf-8">
 	</head>
+	<main>
+		<nav>
+			<a href="Assignment.html">Home</a>
+			<a href="Dog.html">Adult Dog</a>
+			<a href="https://www.purina.com.au/-/media/project/purina/main/breeds/puppies/puppy-german-shepherd.jpg?h=475&la=en&w=825&hash=132EA9A970453AC3545DF71584E6AFD7">Puppy</a>
+			<a href="Dog_Video.html">Youtube Video</a>
+		</nav>
+	</main>
 	<body>
-	<img src="GermanShepardDog.jpg">
+		<img src="GermanShepardDog.jpg">
 	</body>
 </html>
 		
