--- a/Dog_Video.html
+++ b/Dog_Video.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang"en">
 	<head>
-		<title>Assignment 1</title>
+		<title>Dog Image</title>
 		<meta charset="utf-8">
 	</head>
-	<body>
-		<h1>Best Dog</h1>
 		<main>
-			<p>German Shepard</p>
 			<nav>
 				<a href="Assignment.html">Home</a>
 				<a href="Dog.html">Adult Dog</a>
@@ -15,6 +12,8 @@
 				<a href="Dog_Video.html">Youtube Video</a>
 			</nav>
 		</main>
-		<footer>By Arie Eskinazi</footer>
-	</body>
+		<body>
+			<a href="https://www.youtube.com/watch?v=P7ANYtrjEcc">Alfa's video</a>
+		</body>
 </html>
+		
