--- a/Assignment.html
+++ b/Assignment.html
@@ -15,6 +15,7 @@
 				<a href="Dog_Video.html">Youtube Video</a>
 			</nav>
 		</main>
+		<img src="MyDog.JPG">
 		<blockquote cite"https://en.wikipedia.org/wiki/Dog">
 			The dog (Canis familiaris or Canis lupus familiaris is a domesticated descendant of the wolf. Also called the domestic dog, it is derived from the extinct Pleistocene wolf, and the modern wolf is the dog's nearest living relative. Dogs were the first species to be domesticated by hunter-gatherers over 15,000 years ago before the development of agriculture. Due to their long association with humans, dogs have expanded to a large number of domestic individuals and gained the ability to thrive on a starch-rich diet that would be inadequate for other canids."
 		</blockquote>
