--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -1,4 +1,12 @@
 <!DOCTYPE HTML>
-<html>
-	<script src="Basic_JavaScript_1.js"></script>
+<html lang="en">
+	<head>
+		<title>Basic HTML</title>
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<p><font color="green">This is the place to go</font><p/>
+		<script src="Basic_JavaScript_1.js"></script>
+		<p><font color="#FADE28">You made it!</font><p/>
+	</body>
 </html>
