Face and Size Assignment
Added Face and Size to paragraphs

--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<p><font color="green">This is the place to go</font><p/>
+		<p><font color="green" face="impact" size="7">This is the place to go</font><p/>
 		<script src="Basic_JavaScript_1.js"></script>
-		<p><font color="#FADE28">You made it!</font><p/>
+		<p><font color="#FADE28" face="Arial" size="4">You made it!</font><p/>
 	</body>
 </html>
