Bold, Italics, underline Assignment
Added Bold, Italics, underline elements to paragraphs

--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -8,5 +8,9 @@
 		<p><font color="green" face="impact" size="7">This is the place to go</font><p/>
 		<script src="Basic_JavaScript_1.js"></script>
 		<p><font color="#FADE28" face="Arial" size="4">You made it!</font><p/>
+		<p><font color="black" face="Arial" size="5">
+			<b>This text is BOLD, </b><i>This text is italic, </i><u> and this text is underlined<u/>
+			</font>
+		<p/>
 	</body>
 </html>
