Challenge adding image
Added image and an "alt" attribute in case the image does not work

--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -12,5 +12,7 @@
 			<b>This text is BOLD, </b><i>This text is italic, </i><u> and this text is underlined<u/>
 			</font>
 		<p/>
+		
+		<img src="Images/Los-Roques-El-Agua.jpg" alt="Image of the best beach in the planet">
 	</body>
 </html>
