Linking CSS assignment

--- a/Basic_HTML_and_CCS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CCS/Basic_HTML_3.html
@@ -3,14 +3,11 @@
 	<head>
 		<title>Basic HTML and CSS</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="Basics_CSS_1.css">
 	</head>
 	<body>
-		<style>
-			p {color:green; text-align: center;}
-			h1 {color:blue}
-		</style>
 		<h1>This is my Style</h1>
-		<p>The color will be green</p>
+		<p>The color will be green and centered</p>
 		
 		<div style="color: orange">
 			<h2>This is my division</h2>
