Adding Basic_HTML 4 and 5
Made a class and linked it to the html file

--- a/Basic_HTML_and_CCS/Basic_HTML_4.html
+++ b/Basic_HTML_and_CCS/Basic_HTML_4.html
@@ -8,18 +8,26 @@
 	<style>
 	.font_1 {
 		background-color: black;
-		color: white;
+		color: yellow;
 		font-size: large;
 	}
 	.font_2 {
-		background-color: green;
-		color: blue;
+		background-color: darkblue;
+		color: white;
 		font-size: medium;
+	}
+	.My_Style {
+		background-color: darkgreen;
+		color: white;
+		font-size: larger;
+		text-decoration: underline;
+		font-weight: bolder;
 	}
 	</style>
 	<h2 class="font_1">This is h2 element is styled per class attribute font_1</h2>
 	<h3 class="font_2">This is h3 element is styled per class attribute font_2</h3>
 	<h4 class="font_1">Even though this is an h4 element, it is styled the same 
 	as the h2 element because we pointed to the class attribute font_1</h4>
+	<p class="My_Style">This is my style!!</p>
 	</body>
 </html>
