BASIC_HTML_AND_CSS
Added drop shadows, entities, list and tables

--- a/Basic_HTML_and_CCS/Basic_HTML_5.html
+++ b/Basic_HTML_and_CCS/Basic_HTML_5.html
@@ -7,5 +7,7 @@
 	<head>
 	<body>
 		<p>This font will be darkgreen with a yellow background</p>
+		<p>Now I'm going to make use of the forbidden entities of HTML: </p>
+		<p>&amp; &lt; &gt; &quot;</p>
 	</body>
 </html>
