--- a/Basic_HTML_and_CCS/HTML_List.html
+++ b/Basic_HTML_and_CCS/HTML_List.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>HTML List</title>
 		<meta charset="utf-8">
+		<link rel = "stylesheet" type = "text/css" href = "CSS_Lists.css">
 	</head>
 	<body>
 		<h1>Food List</h1>
