--- a/Basic_HTML_and_CCS/HTML_Table.html
+++ b/Basic_HTML_and_CCS/HTML_Table.html
@@ -8,6 +8,7 @@
 			text-align: center;
 			}
 		</style>
+		<link rel="stylesheet" type="text/css" href="CSS_Table.css">
 	</head>
 	<body>
 		<h1>Anime Table</h1>
