added another paragraph

--- a/BasicHTML_Template.html
+++ b/BasicHTML_Template.html
@@ -8,7 +8,8 @@
 	<body>
 		<header>
 			<h4>Basic HTML Template</h4>
+			<p>Introduction to basic HTML syntax</p>
+			<p> Added another paragraph</p>
 		</header>
-		<p>Introduction to basic HTML syntax</p>
 	</body>
 </html>
