Adding Basics CSS demo and style + favicon

--- a/Basic_HTML_and_CSS/Basic_css_demo_1.html
+++ b/Basic_HTML_and_CSS/Basic_css_demo_1.html
@@ -5,6 +5,10 @@
 		<meta charset="utf-8">
 		<meta name="author" content="Arie">
         <link rel="stylesheet" href="css/basic_style.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon_io/favicon-16x16.png">
+        <link rel="manifest" href="Images/favicon_io/site.webmanifest">
     </head>
 	<body>
 		<div>
