--- a/Basic_HTML_and_CSS/Top_Food_AE/index.html
+++ b/Basic_HTML_and_CSS/Top_Food_AE/index.html
@@ -31,8 +31,8 @@
 		<!--END HOME-->
 		
 		<!-- GALLERY -->
-		<section>
-			<div id="gallery">
+		<section id="gallery">
+			<div>
 				<h1>Gallery</h1>
 				<div class="flex-container">
 				
